# cado-nfs-modern

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.upstream.md  SECURITY.md  cado-nfs.py  local.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/release-notes/: v3.0.0-modern.md  v3.2.0-modern.md  v3.3.0-modern.md  v3.4.0-modern.md
.github/workflows/: avx512-validate.yml  ci.yml  release.yml
bench/: README.md  avx2-modinv-validate.sh  avx2-modinv.c  avx512-modinv-validate.sh  avx512-modinv.c  gpu-addmul-bench.cu  gpu-batch-smooth.cu  gpu-cofac-batch-bench.sh  gpu-cofac-validate.sh  gpu-ecm-stage2.cu  gpu-ecm-suyama.cu  gpu-ecm.cu  gpu-modmul-bench.cu  gpu-mont128.cu  gpu-polyselect-collision.cu  gpu-polyselect-modinv.cu  gpu-polyselect-roots-gcd.cu  gpu-polyselect-roots.cu  gpu-prefactor-bench.cu  gpu-prefactor-pm1pp1-validate.sh  gpu-prefactor-pm1pp1.cu  gpu-sieve-scatter.cu  gpu-spmv-bench.cu  gpu-vecreduce-bench.cu  ifma-gfp.c  ifma-validate.sh  las-microbench.sh  vpclmul-mul1n.c  vpclmul-muln.c  vpclmul-validate.sh
config/: cuda.cmake
docs/: ROADMAP-v3.2.0-modern.md  ROADMAP-v3.4.0-modern.md  avx2-simd-b4.md  avx512-sieving-b1.md  extnfs-a4.md  gpu-batch-smooth-c3.md  gpu-cofactorization.md  gpu-linalg.md  gpu-polyselect.md  gpu-prefactor-pm1pp1-c7.md  gpu-prefactor.md  gpu-sieving-c4.md  ifma-gfp-b3.md  number-field-sieve-plain-english.md  number-field-sieve.md  parallel-merge-a3.md  rust-orchestration.md
gf2x/: configure.ac
gf2x/already_tuned/x86_64_vpclmul/: INTEGRATION.md  gf2x_mul1.h  gf2x_mul2.h  gf2x_mul3.h  gf2x_mul4.h
gf2x/config/: features.m4
linalg/bwc/: CMakeLists.txt  matmul-gpu-hooks.cpp  matmul-gpu-hooks.h  matmul-gpu.cu  matmul_top_comm.cpp  mksol.cpp  secure.cpp
misc/gpu_prefactor/: README.md  gpu-prefactor.cu  gpu_ecm_mp.cuh  gpu_pm1_pp1.cuh
polyselect/: CMakeLists.txt  polyselect-gpu-hooks.cpp  polyselect-gpu-hooks.h  polyselect-gpu-stub.cpp  polyselect-gpu.cu  polyselect.cpp  polyselect_collisions.cpp  polyselect_proots.cpp
rust/: Cargo.toml  deploy-test.sh  robustness-test.sh  server-interop-test.sh  server-swap-test.sh
rust/cado-nfs-client/: Cargo.toml
rust/cado-nfs-client/src/: main.rs
rust/cado-wu-server/: Cargo.toml
rust/cado-wu-server/src/: main.rs
scripts/: cluster-launch.sh
scripts/cadofactor/: cadotask.py  external_api_server.py  gpu_prefactor.py  status.py  toplevel.py
sieve/: las-cofac-standalone.cpp  las-cofac-standalone.hpp  las-cofactor.cpp  las-cofactor.hpp  las-process-bucket-region.cpp
sieve/ecm/: CMakeLists.txt  gpu_cofac.cpp  gpu_cofac.hpp  gpu_ecm.cu  gpu_ecm.hpp  gpu_ecm_stub.cpp
tests/linalg/bwc/: CMakeLists.txt  test_gpu_vecreduce.cu
tests/scripts/cadofactor/: CMakeLists.txt
