[package]
name = "cado-nfs-client"
version = "3.0.0"
edition = "2021"
description = "Static-binary work-unit client for CADO-NFS (speaks the stock Python api_server protocol)"
license = "LGPL-2.1-or-later"

[[bin]]
name = "cado-nfs-client-rs"
path = "src/main.rs"

[dependencies]
# blocking HTTP with rustls (no OpenSSL) so the result is a mostly-static binary
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "multipart", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
anyhow = "1"
# direct rustls (same 0.23 reqwest's rustls-tls pulls) for --certsha1 cert pinning
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
