[package]
name = "cado-wu-server"
version = "3.0.0"
edition = "2021"
description = "Async work-unit server for CADO-NFS (same HTTP protocol + wudb SQLite schema as api_server.py)"
license = "LGPL-2.1-or-later"

[[bin]]
name = "cado-wu-server-rs"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal", "time"] }
rusqlite = { version = "0.31", features = ["bundled"] }   # bundled = static sqlite, no system dep
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
